# nnapi

./: Cargo.toml
nnapi/: Cargo.toml
nnapi-sys/: Cargo.toml  build.rs  wrapper.h
nnapi-sys/examples/: add_arrays.rs
nnapi-sys/src/: lib.rs
nnapi/src/: compilation.rs  device.rs  error.rs  execution.rs  lib.rs  model.rs  operand.rs
